feat: Add CORS configuration with environment variable
- Modified CorsConfig.java to read ALLOWED_ORIGINS from environment
- Added fallback to localhost:3000 for local development
- Updated .env.example with CORS configuration
- Updated DEPLOY.md with CORS setup instructions for Render
- Supports comma-separated list of allowed origins